# deployments

./: README.md  k0sctl.yaml  license
ansible/: .env.sample  .gitignore  README.md  big_dumper.yml  cert_manager.yml  concourse.yml  concourse_restart.yml  condor.yml  config_files.yml  cronjobs.yml  de-aws.yaml  deploy_a_service.yml  deploy_service.yml  gocd.yml  gocd_k3s_config.yaml  gocd_kubeconfig.yaml  grouper.yml  harbor.yml  install_everything.yml  jaeger.yml  k3s_uninstall.yml  k8s_cluster_prep.yml  k8s_nodes.yml  keycloak.yml  kubernetes.yml  kubernetes_de_reqs.yml  kubernetes_firewalls.yml  kubernetes_install_csi_driver.yml  kubernetes_networking.yml  kubernetes_node_feature_discovery.yml  kubernetes_nodes.yml  kubernetes_service_workers.yml  kubernetes_setup_haproxy.yml  kubernetes_uninstall_k8s.yml  kubernetes_update_nodes.yml  kubernetes_vice_workers.yml  ldap_slapd.yml  nats.yml  nvidia_drivers.yml  old_kubernetes.yml  (+16 more)
ansible/cert-manager/: cert-manager.custom.yaml  install.yml  issuers.yaml
ansible/condor/: README.md  condor-exec-node-check.yml  condor-exec-node.yml  infra-condor-node.yaml  install.yml  requirements.yml
ansible/docs/: haproxy.md  index.md  kubernetes.md  nats.md  postgresql.md  tls_certs.md
ansible/group_vars/: all.yml
ansible/grouper/: main.yml
ansible/haproxy/: README.md  main.yml
ansible/nats/: .gitignore  (+2 more)
kubernetes/: README.md  nuke-it-from-orbit.yml
kustomize/: README.md
ldap/: README.md
notes/: longhorn.md  storage.md
scripts/appei/: README.md  export.py  import.py  list.py  login.py  logout.py  pyproject.toml
(+305 files in other folders)
