[tool.poetry]
name = "appei"
version = "0.1.0"
description = "Import and exports app information for the DE"
authors = ["John Wregglesworth <wregglej@cyverse.org>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
tabulate = "^0.9.0"
deepmerge = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
